--- a/DailySummarizing/170315/NetworkPractice/NetworkPractice/Info.plist
+++ b/DailySummarizing/170315/NetworkPractice/NetworkPractice/Info.plist
@@ -7,6 +7,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
